--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,8 @@
 body {
-	background: linear-gradient(-45deg, #FFFCB7, #FFCCCC, #BBF7FF, #FFFCB7, #FFCCCC, #BBF7FF);
-	background-size: 200% 200%;
-	animation: gradient 15s ease infinite;
-	/* height: 100vh; */
+  /* background: linear-gradient(-45deg, #FFFCB7, #FFCCCC, #BBF7FF, #FFFCB7, #FFCCCC, #BBF7FF); */
+  /* background-size: 200% 200%;
+  animation: gradient 15s ease infinite; */
+  /* height: 100vh; */
 }
 
 /* @keyframes gradient {
@@ -16,7 +16,6 @@ body {
 		background-position: 0% 50%;
 	}
 } */
-
 
 .App {
   text-align: center;
