--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,9 +16,11 @@ code {
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: #EBEBEB;
+  /* background-color: #ebebeb; */
+  background-color: white;
   border-radius: 20px;
-  padding: 6px 12px;
+  border: 1px solid var(--mantine-color-blue-1);
+  padding: 4px 12px;
   margin: 4px;
   font-size: 0.8rem;
 }
